force-app/main/default/objects/Additional_Account_Info__c/Additional_Account_Info__c.object-meta.xml
<CustomObject>
    <description>Contains additional Account Information for Trumpf Sales Team use</description>
    <label>Additional Account Info</label>
    <nameField>
        <label>Additional Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Account Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>