force-app/main/default/objects/Additional_Account_Info__c/fields/Acute_Customer__c.field-meta.xml
<CustomField>
    <fullName>Acute_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acute Customer</label>
    <type>Checkbox</type>
</CustomField>