force-app/main/default/objects/Additional_Account_Info__c/fields/Beds__c.field-meta.xml
<CustomField>
    <fullName>Beds__c</fullName>
    <label>Beds</label>
    <length>25</length>
    <type>Text</type>
</CustomField>