force-app/main/default/objects/Additional_Account_Info__c/fields/Current_Past_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Current_Past_Contracts__c</fullName>
    <label>Current / Past Contracts</label>
    <type>TextArea</type>
</CustomField>