force-app/main/default/objects/Additional_Account_Info__c/fields/Document_Store__c.field-meta.xml
<CustomField>
    <fullName>Document_Store__c</fullName>
    <description>Used as the display of the link to the Care Comm SharePoint Document Store as a text label.</description>
    <formula>IF(ISBLANK(Document_Store_Link__c), &apos;&apos;, HYPERLINK(Document_Store_Link__c,  Account__r.Name &amp; &quot; Document Store&quot;))</formula>
    <label>Document Store</label>
    <type>Text</type>
</CustomField>