force-app/main/default/objects/Additional_Account_Info__c/fields/Document_Store_Error__c.field-meta.xml
<CustomField>
    <fullName>Document_Store_Error__c</fullName>
    <description>Used to store Error Messages from Mulesoft for the Care Comm SharePoint integration.</description>
    <label>Document Store Error</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>