force-app/main/default/objects/Additional_Account_Info__c/fields/Document_Store_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Store_Link__c</fullName>
    <description>Used by the Care Comm SharePoint Integration for the Document Store.</description>
    <label>Document Store Link</label>
    <type>Url</type>
</CustomField>