force-app/main/default/objects/Additional_Account_Info__c/fields/Document_Store_Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Document_Store_Status_Comment__c</fullName>
    <formula>IF(Name = &apos;Document Store Error&apos;, &apos;The Document Store integration has failed. Please try again or submit an IT Self-Service Salesforce Incident Ticket.&apos;, &apos;&apos;)</formula>
    <label>Document Store Status Comment</label>
    <type>Text</type>
</CustomField>