force-app/main/default/objects/Additional_Account_Info__c/fields/Have_XI__c.field-meta.xml
<CustomField>
    <fullName>Have_XI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have XI ?</label>
    <type>Checkbox</type>
</CustomField>