force-app/main/default/objects/Additional_Account_Info__c/fields/HRCSVC_Account_Protocol__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Account_Protocol__c</fullName>
    <description>SE-153. Field that holds the account protocol information for a particular Channel.</description>
    <label>Account Protocol</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>