force-app/main/default/objects/Additional_Account_Info__c/fields/HRCSVC_Is_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Is_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True by the before-save flow if another Account Protocol exists with same Account and Protocol Category (SE-2348)</description>
    <label>Is Duplicate</label>
    <type>Checkbox</type>
</CustomField>