force-app/main/default/objects/Additional_Account_Info__c/fields/HRCSVC_Protocol_Category__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Protocol_Category__c</fullName>
    <description>SE-152. Used to define the protocol category so that we know which one to inherit on the case.</description>
    <label>Protocol Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCSVC_Protocol_Category</valueSetName>
    </valueSet>
</CustomField>