force-app/main/default/objects/Additional_Account_Info__c/fields/Lifts__c.field-meta.xml
<CustomField>
    <fullName>Lifts__c</fullName>
    <label>Lifts</label>
    <length>25</length>
    <type>Text</type>
</CustomField>