force-app/main/default/objects/Additional_Account_Info__c/fields/Mortara__c.field-meta.xml
<CustomField>
    <fullName>Mortara__c</fullName>
    <label>Mortara</label>
    <length>25</length>
    <type>Text</type>
</CustomField>