force-app/main/default/objects/Additional_Account_Info__c/fields/Notes_From_Sales__c.field-meta.xml
<CustomField>
    <fullName>Notes_From_Sales__c</fullName>
    <label>Notes From Sales</label>
    <type>TextArea</type>
</CustomField>