force-app/main/default/objects/Additional_Account_Info__c/fields/Notes_From_Service__c.field-meta.xml
<CustomField>
    <fullName>Notes_From_Service__c</fullName>
    <label>Notes From Service</label>
    <type>TextArea</type>
</CustomField>