force-app/main/default/objects/Additional_Account_Info__c/fields/Number_of_OR_s__c.field-meta.xml
<CustomField>
    <fullName>Number_of_OR_s__c</fullName>
    <label>Number of OR&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>