force-app/main/default/objects/Additional_Account_Info__c/fields/Specialties__c.field-meta.xml
<CustomField>
    <fullName>Specialties__c</fullName>
    <label>Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Gynecology</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>Neurosurgery</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>