force-app/main/default/objects/Additional_Account_Info__c/fields/Stretchers__c.field-meta.xml
<CustomField>
    <fullName>Stretchers__c</fullName>
    <label>Stretchers</label>
    <length>25</length>
    <type>Text</type>
</CustomField>