force-app/main/default/objects/Additional_Account_Info__c/fields/To_update_this_info__c.field-meta.xml
<CustomField>
    <fullName>To_update_this_info__c</fullName>
    <defaultValue>&quot;Contact Hilary Benjamin&quot;</defaultValue>
    <label>To update this info:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>