force-app/main/default/objects/Additional_Account_Info__c/fields/Trumpf__c.field-meta.xml
<CustomField>
    <fullName>Trumpf__c</fullName>
    <label>Trumpf</label>
    <length>25</length>
    <type>Text</type>
</CustomField>