force-app/main/default/objects/Additional_Account_Info__c/fields/Warranty_Expiration_Overview__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiration_Overview__c</fullName>
    <label>Warranty Expiration Overview</label>
    <type>TextArea</type>
</CustomField>