force-app/main/default/objects/Additional_Account_Info__c/fields/Welch_Allyn__c.field-meta.xml
<CustomField>
    <fullName>Welch_Allyn__c</fullName>
    <label>Welch Allyn</label>
    <length>25</length>
    <type>Text</type>
</CustomField>