force-app/main/default/objects/Additional_Account_Info__c/fields/X12_Month_FFS__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_FFS__c</fullName>
    <label>12 Month FFS</label>
    <length>25</length>
    <type>Text</type>
</CustomField>