force-app/main/default/objects/Additional_Account_Info__c/recordTypes/Additional_Account_Info.recordType-meta.xml
<RecordType>
    <fullName>Additional_Account_Info</fullName>
    <active>true</active>
    <description>Default Record Type</description>
    <label>Additional Account Info</label>
</RecordType>