force-app/main/default/objects/Additional_Account_Info__c/recordTypes/Document_Store.recordType-meta.xml
<RecordType>
    <fullName>Document_Store</fullName>
    <active>true</active>
    <description>Used to manage the Care Comm Document Store SharePoint integration.</description>
    <label>Document Store</label>
</RecordType>