force-app/main/default/objects/Additional_Account_Info__c/validationRules/HRCSVC_Duplicate_Account_Protocol.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Duplicate_Account_Protocol</fullName>
    <active>true</active>
    <description>SE-2348</description>
    <errorConditionFormula>HRCSVC_Is_Duplicate__c = True</errorConditionFormula>
    <errorMessage>Another Account Protocol exists with the same Protocol Category.</errorMessage>
</ValidationRule>